[package]
name = "exclave"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
description = "A frontend for running factory tests"
license = "BSD-3-Clause"

[dependencies]
notify = "4.0.1"
clap = "2.26.0"
console = "0.5.0"
ctrlc = "3.0.2"
dependy = "0.4.0"
humantime = "1.0.0"
regex = "0.2.2"
runny = "1.2.4"
systemd-parser = "0.1.3"