[package]
name = "exclave"
version = "0.2.2"
authors = ["Sean Cross <sean@xobs.io>"]
description = "A frontend for running factory tests"
license = "BSD-3-Clause"

[dependencies]
notify = "4.0"
clap = "2.26"
console = "0.6.2"
ctrlc = { version = "3.1.1", features = ["termination"] }
dependy = "0.4.0"
humantime = "1.0.0"
regex = "0.2"
runny = "1.2.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
systemd-parser = "0.1"